--- a/About.html
+++ b/About.html
@@ -13,10 +13,10 @@
 	<!--navigation------------->
 	<nav>
 		<!--logo-->
-		<a href="ex.html" class="logo">The King's Canteen</a>
+		<a href="index.html" class="logo">The King's Canteen</a>
 		
 		<ul>
-			<li><a href="ex.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="Daftar makanan.html">Daftar Makanan</a></li>
 			<li><a href="Resep makanan.html">Resep Makanan</a></li>
 			<li><a href="Beli makanan.html">Beli Makanan</a></li>
