--- a/Beli makanan.html
+++ b/Beli makanan.html
@@ -11,7 +11,7 @@
 		<a href="ex.html" class="sebuahlogo">The King's Canteen</a>
 		<div  class="ulp">
 		<ul>
-			<li><a href="ex.html" >Home</a></li>
+			<li><a href="index.html" >Home</a></li>
 			<li><a href="Daftar makanan.html" >Daftar Makanan</a></li>
 			<li><a href="Resep makanan.html">Resep Makanan</a></li>
 			<li><a href="Beli makanan.html">Beli Makanan</a></li>
