--- a/Daftar makanan.html
+++ b/Daftar makanan.html
@@ -9,9 +9,9 @@
 	<section>
 	<nav class="nap">
 		<!--logo-->
-		<a href="ex.html" class="lambang">The King's Canteen</a>
+		<a href="index.html" class="lambang">The King's Canteen</a>
 		<ul class="ul">
-			<li><a href="ex.html" class="napi">Home</a></li>
+			<li><a href="index.html" class="napi">Home</a></li>
 			<li><a href="Daftar makanan.html" class="napi">Daftar Makanan</a></li>
 			<li><a href="Resep makanan.html" class="napi">Resep Makanan</a></li>
 			<li><a href="Beli makanan.html" class="napi">Beli Makanan</a></li>
