--- a/Resep makanan.html
+++ b/Resep makanan.html
@@ -13,9 +13,9 @@
 <body class="body">
 
 	<nav class="napigasi">
-		<a href="ex.html" class="simbol">The King's Canteen </a>
+		<a href="index.html" class="simbol">The King's Canteen </a>
 		<ul class="ulu">
-			<li><a href="ex.html" class="napi">Home</a></li>
+			<li><a href="index.html" class="napi">Home</a></li>
 			<li><a href="Daftar Makanan.html" class="napi">Daftar makanan</a></li>
 			<li><a href="Resep makanan.html" class="napi">Resep Makanan</a></li>
 			<li><a href="Beli makanan.html" class="napi">Beli Makanan</a></li>
