--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<div class="header">
 		<h1>The King's Canteen</h1>
 		<h3>DELICIOUS</h3>
+		<h1>Haifa cantik banget</h1>
 	</div>
 
 	<div class="topnav">
